tests/vertical-slice/accept/owned_nested_tuple_return_drop.hew
fn make_nested() -> ((string, i64), bool) {
    (("hi", 7), true)
}

fn main() {
    let t = make_nested();
    println(f"{(t.0).0}:{(t.0).1}:{t.1}");
}
